tests/client: test nm-cloud-setup
Some fairly rudimentary testing of nm-cloud-setup.

--- a/Makefile.am
+++ b/Makefile.am
@@ -5472,6 +5472,13 @@ check-local-tests-client: src/nmcli/nmcli src/tests/client/test-client.py
 
 check_local += check-local-tests-client
 
+check-local-tests-cloud-setup: src/nm-cloud-setup/nm-cloud-setup src/tests/client/test-client.py
+	LIBTOOL="$(LIBTOOL)" "$(srcdir)/src/tests/client/test-client.sh" "$(builddir)" "$(srcdir)" "$(PYTHON)" -- TestNmCloudSetup
+
+if BUILD_NM_CLOUD_SETUP
+check_local += check-local-tests-cloud-setup
+endif
+
 CLEANFILES += src/tests/client/test-client.log
 
 EXTRA_DIST += \
