--- a/meson.build
+++ b/meson.build
@@ -563,6 +563,13 @@ enable_ppp = get_option('ppp')
 if enable_ppp
   assert(cc.has_header('pppd/pppd.h'), 'couldn\'t find pppd.h. pppd development headers are required')
 
+  pppd_dep = dependency('pppd', required: false)
+  if (pppd_dep.found())
+    pppd_version = pppd_dep.version()
+  else
+    pppd_version = '2.4.9'
+  endif
+
   pppd_path = get_option('pppd')
   if pppd_path == ''
     pppd = find_program('pppd', '/sbin/pppd', '/usr/sbin/pppd', required: false)
@@ -574,7 +581,7 @@ if enable_ppp
 
   pppd_plugin_dir = get_option('pppd_plugin_dir')
   if pppd_plugin_dir == ''
-    pppd_plugin_dir = join_paths(nm_libdir, 'pppd', '2.4.5')
+    pppd_plugin_dir = join_paths(nm_libdir, 'pppd', pppd_version)
   endif
 endif
 config_h.set10('WITH_PPP', enable_ppp)
