ppp, adding support for compiling against pppd-2.5.0
This change does the following
* Adding in nm-pppd-compat.h to mask details regarding different
  versions of pppd.
* Fix the nm-pppd-plugin.c regarding differences in API between
  2.4.9 (current) and latet pppd 2.5.0 in master branch
* Additional fixes to the configure.ac to appropriately set defines used
  for compilation

(cherry picked from commit 8469c09a5006f9189c9b496ffa4c7e6755d56084)
(cherry picked from commit 521f936567134a19e53187cd92d09a96ad78e850)

--- a/Makefile.am
+++ b/Makefile.am
@@ -3186,6 +3186,7 @@ src_core_ppp_nm_pppd_plugin_la_CPPFLAGS = \
 src_core_ppp_nm_pppd_plugin_la_SOURCES = \
 	src/core/ppp/nm-pppd-plugin.c \
 	src/core/ppp/nm-pppd-plugin.h \
+	src/core/ppp/nm-pppd-compat.h \
 	src/core/ppp/nm-ppp-status.h
 
 src_core_ppp_nm_pppd_plugin_la_LDFLAGS = \
