libnm: mark unused properties "wifi.{rate,tx-power}" as deprecated
They were never implemented nor used.

--- a/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
+++ b/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
@@ -124,6 +124,7 @@
                   gprop-type="guint"
                   />
         <property name="rate"
+                  is-deprecated="1"
                   dbus-type="u"
                   gprop-type="guint"
                   />
@@ -140,6 +141,7 @@
                   gprop-type="GBytes"
                   />
         <property name="tx-power"
+                  is-deprecated="1"
                   dbus-type="u"
                   gprop-type="guint"
                   />
