--- a/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
+++ b/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
@@ -828,6 +828,7 @@
                   gprop-type="GStrv"
                   />
         <property name="read-only"
+                  is-deprecated="1"
                   dbus-type="b"
                   gprop-type="gboolean"
                   />
