--- a/.gitlab-ci/ci.template
+++ b/.gitlab-ci/ci.template
@@ -17,10 +17,10 @@
 
 .templates_sha: &template_sha ffe4d1b10aab7534489f0c4bbc4c5899df17d3f2 # see https://docs.gitlab.com/ee/ci/yaml/#includefile
 
-{# Group distros by their common (name,base_type,tag) tuples.#}
+{# Group distros by their common (name,base_type) tuples.#}
 {% set distro_groups = [] %}
 {% for distro in distributions %}
-  {% set g = {'name':distro.name,'base_type':distro.base_type,'tag':distro.tag} %}
+  {% set g = {'name':distro.name,'base_type':distro.base_type} %}
   {% if g not in distro_groups %}
   {%   do distro_groups.append(g) %}
   {% endif %}
@@ -62,7 +62,7 @@ variables:
   # This is done by running `ci-fairy generate-template` and possibly bumping
   # ".default_tag".
 {% for distro_group in distro_groups|sort(attribute='name') %}
-  {{"%-13s"| format(distro_group.name.upper() + '_TAG:')}}'{{distro_group.tag}}-{{
+  {{"%-13s"| format(distro_group.name.upper() + '_TAG:')}}'tag-{{
     (ci_fairy.hashfiles('./.gitlab-ci/config.yml',
                         './.gitlab-ci/ci.template',
                         './.gitlab-ci/' + distro_group.base_type + '-install.sh',
