--- a/.gitlab-ci/config.yml
+++ b/.gitlab-ci/config.yml
@@ -7,29 +7,21 @@
 # https://gitlab.freedesktop.org/freedesktop/ci-templates
 #
 
-# We're happy to rebuild all containers when one changes.
-.default_tag: &default_tag '2023-04-11.0'
-
-
 # The list of all distributions we want to create job for.
-# The template generates manual jobs for all these.
 distributions:
   - name: fedora
-    tag: *default_tag
     base_type: fedora
-    # Tier1 is used to build the pages and check-{tree,patch}
+    # The first tier:1 in the list is used to build the pages and check-{tree,patch}
     tier: 1
     versions:
       - '37'
   - name: fedora
-    tag: *default_tag
     base_type: fedora
     tier: 2
     versions:
       - '36'
       - '38'
   - name: fedora
-    tag: *default_tag
     base_type: fedora
     tier: 3
     versions:
@@ -40,7 +32,6 @@ distributions:
       - '34'
       - '35'
   - name: ubuntu
-    tag: *default_tag
     base_type: debian
     tier: 2
     versions:
@@ -50,7 +41,6 @@ distributions:
       - 'devel'
       - 'rolling'
   - name: debian
-    tag: *default_tag
     base_type: debian
     tier: 2
     versions:
@@ -58,14 +48,12 @@ distributions:
       - '11'
       - 'sid'
   - name: debian
-    tag: *default_tag
     base_type: debian
     tier: 3
     versions:
       - '9'
       - 'testing'
   - name: centos
-    tag: *default_tag
     base_type: fedora
     tier: 2
     versions:
@@ -74,7 +62,6 @@ distributions:
       - '8.1.1911'
       - '8.3.2011'
   - name: centos
-    tag: *default_tag
     base_type: fedora
     tier: 3
     versions:
@@ -83,7 +70,6 @@ distributions:
       - '7.8.2003'
       - '8.2.2004'
   - name: alpine
-    tag: *default_tag
     base_type: alpine
     tier: 2
     versions:
